Fixed typo in board.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,7 +57,7 @@
         </div>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
+    <h1>AnCru</h1>
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> Play </button>
 
     <div class="modal fade" id="exampleModal" tabindex="-1">
