--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -77,9 +77,9 @@
           <div class="modal-body">
             <select class="form-select" aria-label="Default select example">
               <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
             </select>
           </div>
           <div class="modal-footer">
