Added Takeback functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -92,6 +92,7 @@
     </div>
     <div class="container d-flex justify-content-center"> <div id="board" style="width: 600px"></div> </div>
     <button id="newGameBtn">New Game</button>
+    <button id="takeBackBtn">Takeback</button>
     <label>Status:</label>
     <div id="Status"></div>
 
