--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">AnCru</a>
+      <a class="navbar-brand" href="https://an-cru.herokuapp.com/">AnCru</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Download</a>
+            <a class="nav-link active" aria-current="page" href="https://github.com/branzhan/AnCru">Download</a>
           </li>
         </ul>
       </div>
@@ -90,7 +90,9 @@
   </div>
   <button id="newGameBtn">Restart</button>
   <button id="takeBackBtn">Takeback</button>
+  <br></br>
   <label>Status:</label>
+  <div></div>
   <div id="Status"></div>
   {{/if}}
 
